# genai_gallery

./: AGENTS.md
backend/: .gitignore  README.md  database.py  gallery.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend-go/: go.mod  go.sum
backend-go/cmd/server/: main.go
backend-go/internal/config/: config.go
backend-go/internal/database/: db.go
backend-go/internal/handlers/: handlers.go
backend-go/internal/sync/: sync.go
backend/src/genai_gallery/: config.py  database.py  main.py  models.py  schemas.py
frontend/: vite.config.ts
frontend/src/: App.vue  types.ts
frontend/src/components/: Gallery.vue  MediaCard.vue  MediaDetail.vue  PageBlock.vue  SiteHeader.vue
frontend/src/services/: api.ts
frontend/src/stores/: gallery.ts
frontend/src/views/: HomeView.vue
