[project]
name = "genai_gallery"
version = "0.1.0"
description = "Backend for GenAI Gallery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "sqlalchemy==2.0.45",
    "pydantic==2.12.5",
    "python-multipart==0.0.21",
    "pillow==12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genai_gallery"]
